# ReceiptTamer

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LOG_STANDARD.md  PROCESSING.md  README.md  package.json  pubspec.yaml
.claude/: settings.json  settings.local.json
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  mnn-jni.cpp  mnn_llm.hpp
integration_test/: README.md  ledger_profile_test.dart
lib/: app.dart  main.dart
test/: action_controls_visibility_test.dart  ai_use_disclosure_test.dart  android_abi_support_test.dart  android_arm64_packaging_test.dart  app_notice_migration_contract_test.dart  app_notice_test.dart  app_select_field_test.dart  app_text_field_test.dart  app_typography_test.dart  backup_service_test.dart  cleanup_provider_test.dart  cleanup_service_atomicity_test.dart  download_directory_listing_contract_test.dart  duplicate_detection_service_test.dart  empty_state_test.dart  export_attachment_contract_test.dart  export_completion_screen_test.dart  export_option_semantics_test.dart  file_service_cache_test.dart  file_service_download_reference_test.dart  floating_glass_material_test.dart  floating_overlay_layout_test.dart  frame_timing_report_test.dart  glass_content_bottom_sheet_test.dart  glass_navigation_bar_test.dart  glass_surface_test.dart  home_overview_test.dart  invoice_assistant_provider_test.dart  invoice_assistant_widget_test.dart  invoice_filter_strip_test.dart  invoice_provider_refresh_test.dart  invoice_relation_export_calculation_test.dart  (+35 more)
tools/: generate_icons.py  (+9 more)
(+256 files in other folders)
